--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,13 @@
   <data class="u-url" href="/"></data>
 
   <div class="wrapper">
-    <h2 class="footer-heading">Contact</h2>
+    <h2 class="footer-heading"><b>Contact</b></h2>
 
     <div class="footer-col-wrapper">
       <!-- <h2 class="footer-heading">Contact</h2> -->
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">Email:</li>
+          <li class="p-name"><b>Email:</b></li>
           <li><a class="u-email" href="mailto:CoryWBoris@gmail.com">CoryWBoris@gmail.com</a></li>
         </ul>
       </div>
