--- a/assets/main.scss
+++ b/assets/main.scss
@@ -468,9 +468,9 @@ a[href^="mailto:"] {
 // Base Car Styles
 .car, .red-car, .green-car, .purple-car {
     position: absolute;
-    top: -13px;
+    top: -18px;
     left: 50%;
-    transform: scale(1.9) !important;
+    transform: scale(3.5) !important;
     cursor: pointer;
     z-index: 4;
     touch-action: pan-y !important;
@@ -484,7 +484,7 @@ a[href^="mailto:"] {
     transition: filter 0.2s ease;
 
     &.reversed {
-        transform: scale(1.9) scaleX(-1) !important;
+        transform: scale(3.5) scaleX(-1) !important;
     }
 }
 // Keep purple car styles unchanged since it's already handled
@@ -550,12 +550,12 @@ a[href^="mailto:"] {
 // Landscape Orientation Adjustments
 @media (orientation: landscape) {
     .car, .red-car, .green-car, .purple-car {
-        transform: scale(1.9) !important;
-        -webkit-transform: scale(1.9) !important;
+        transform: scale(3.5) !important;
+        -webkit-transform: scale(3.5) !important;
 
         &.reversed {
-            transform: scale(1.9) scaleX(-1) !important;
-            -webkit-transform: scale(1.9) scaleX(-1) !important;
+            transform: scale(3.5) scaleX(-1) !important;
+            -webkit-transform: scale(3.5) scaleX(-1) !important;
         }
     }
 }
@@ -571,7 +571,7 @@ a[href^="mailto:"] {
         flex-direction: column;
         gap: 3px !important;
         padding: 0 !important;
-        padding-bottom: 18px !important;
+        padding-bottom: 50px !important;
 
         > button {
             margin: 2px 0 !important;
@@ -590,7 +590,9 @@ a[href^="mailto:"] {
 @media (orientation: landscape) and (max-width: 1023px) {
     .control-container {
         flex-direction: row;
-        padding: 7.5px 20px;
+        padding-bottom: 30px;
+        
+        
 
         > button {
             flex: 1;
@@ -602,7 +604,6 @@ a[href^="mailto:"] {
         .control-container {
             width: calc(100% - 5px) !important;
             margin: 0 auto;
-            padding: 7.5px 5px !important;
         }
 
         .volume-slider-container,
