adjusted extra bottom padding for portrait view

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -581,10 +581,10 @@ a[href^="mailto:"] {
         }
     }
 
-    .audio-container {
-        padding-bottom: 80px !important;
-    }
-}
+//     .audio-container {
+//         padding-bottom: 80px !important;
+//     }
+// }
 
 // Landscape Mode Controls
 @media (orientation: landscape) and (max-width: 1023px) {
