--- a/assets/main.scss
+++ b/assets/main.scss
@@ -581,10 +581,10 @@ a[href^="mailto:"] {
         }
     }
 
-//     .audio-container {
-//         padding-bottom: 80px !important;
-//     }
-// }
+    .audio-container {
+        padding-bottom: 0px !important;
+    }
+}
 
 // Landscape Mode Controls
 @media (orientation: landscape) and (max-width: 1023px) {
@@ -604,6 +604,7 @@ a[href^="mailto:"] {
         .control-container {
             width: calc(100% - 5px) !important;
             margin: 0 auto;
+            padding-bottom: 30px !important;
         }
 
         .volume-slider-container,
